# home_work_web_5

./: pyproject.toml
home_work_web_5/: exchange.py  exchange_rate_fetcher.py  main.py  pyproject.toml
home_work_web_5/chat/: index.html  main.js  server.py
home_work_web_5/chat/static/: client.js  index.html
